# elt-on-github-actions

./: .pre-commit-config.yaml  .release-please-manifest.json  README.md  mise.toml  release-please-config.json
.devcontainer/: devcontainer.json
.github/workflows/: dbt-run.yaml  docker-build-push.yaml  docker-run.yaml  extract-tests.yaml  release-please.yaml
docs/: README.md  components.md  onboarding.md  quick-start.md
src/extract/: CHANGELOG.md  Dockerfile  pyproject.toml
src/extract/src/extract/: __init__.py  main.py
src/extract/tests/: test_main.py
src/transform/: .gitignore  README.md  dbt_project.yml  env.example  profiles.yml  pyproject.toml
src/transform/models/marts/tableau/: _tableau__models.yml  activity.sql
src/transform/models/staging/dimensions/: _dimensions__models.yml  _dimensions__sources.yml  stg_dimensions__master.sql  stg_dimensions__system1.sql
src/transform/models/staging/system1/: _system1__models.yml  _system1__sources.yml  stg_system1__activity.sql
